<resources>
    <string name="app_name">SignToIntroduce</string>
    <string name="name_title">이름</string>
    <string name="id_title">아이디</string>
    <string name="pw_title">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="btn_signup">회원가입</string>
    <string name="mbti_title">MBTI</string>
    <string name="btn_finish">종료</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="pw_hint">비밀번호를 입력해주세요.</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="mbti_hint">MBTI를 입력해주세요.</string>
</resources>



